--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">activitygame</string>
+    <string name="app_name">One Earth</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Add</string>
     <string name="title_notifications">Info</string>
