--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -552,6 +552,7 @@
     <string name="activity_overview">Activity Overview</string>
     <string name="ranking_overview">Your Ranking Overview</string>
     <string name="ranks_by_school">Ranks by School</string>
+    <string name="your_top_three">Your Top 3 activities</string>
     <string name="ranks_by_class">Ranks by Class</string>
     <string name="_1500">1500</string>
     <string name="_3018">3018</string>
