--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -433,6 +433,7 @@
     <string name="we_have_sent_an_verification_code_to_the_phone_number_977984123456">We have sent an verification code \n to your phone number</string>
     <string name="submit">Submit</string>
     <string name="create_nyour_account">Create \nyour account</string>
+    <string name="create_your_school_account">Register \nyour school</string>
     <string name="eco_add_new">Add a new eco-activity</string>
     <string name="email">Email</string>
     <string name="phone_number">Phone Number</string>
